styles/Assignment.module.css
/* ... */
.wizardheading {
  margin: 0;
  padding-top: .1em;
}

.contenWrapper ul li {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10em;
  border: var(--color_main) 2px solid;
  width: 3em;
  height: 3em;
  z-index: 0;
  padding: 1.5em;
}

.wizardLine {
  width: 100%;
  z-index: 1;
  height: .1rem;
  position: relative;
  color: black;
  transition: 1s;
  background: linear-gradient(to left, rgb(228, 228, 228) 50%, var(--color_main) 50%) right;
  background-size: 205%;
  transition: 1s ease-out;
}

.activeLine {
  transition: 1s;
  background-position: left;
  /*transition: all 1500ms cubic-bezier(0.290, 0.870, 0.160, 0.925);
  transition-timing-function: cubic-bezier(0.290, 0.870, 0.160, 0.925);*/
}

.filled {
  background-color: var(--color_main) !important;
  color: white;
  transition: .5s;
  transition-delay: 1s;
}

.wizardContent {
  display: flex;
  flex-direction: row;
  color: white;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  flex-wrap: wrap;
}

.inputContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin-bottom: 1em;
}

.dateWrapper{
  width: 100%;
}

.inputContainer input[type="text"] {
  background-color: var(--background_2);
  border-radius: .3em;
  font-size: .9em;
  color: rgb(255, 255, 255);
  outline: 0;
  border: 0;
  padding: .3em;
  width: auto;
  min-width: 20em;
}

.wizardContent label {
  font-size: .8em;
}


.wizardContentContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  color: rgb(255, 255, 255);
  flex-direction: row;
  margin-top: auto;
  margin-bottom: auto;
  width: 80%;
  height: auto;
}

.wizardButtonContainer {
  margin-top: 1em;
  justify-self: flex-end;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  width: 80%;
  padding-bottom: 1em;
}

.wizardButtonContainer button {
  background-color: var(--color_main);
  border: 0;
  padding: .5em 1em .5em 1em;
}

.disabeldBtn {
  pointer-events: none;
  opacity: .7;
  user-select: none;
  background-color: var(--disabled_filter) !important;
}

.hidden,
.hidden>*,
.hidden>*>* {
  display: none !important;
  pointer-events: none;
  cursor: loading;
}


.bumper {
  height: 1em;
}

.edditOff {
  width: 50%;
  overflow: visible;
  border: 1px solid transparent;
  display: inline;
  font-family: inherit;
  font-size: inherit;
  background-color: transparent;
  outline: 0;
}

.edditOn {
  width: 50%;
  overflow: visible;
  border: 1px solid var(--background_2);
  display: inline;
  font-family: inherit;
  font-size: inherit;
  background-color: var(--background_1);
  outline: 0;
  border-radius: .3em;
}

.plus img {
  width: 100%;
  height: 100%;
}

.plusContainer {
  width: 60%;
  height: 4em;
  background-color: var(--background_1);
  border-radius: .3em;
  display: flex;
  align-items: center;
  padding: 1em;
  justify-content: space-between;
}

.plus {
  width: 3em;
  height: 3em;
  float: right;
  padding: .3em;
  background-color: var(--color_main);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: .3em;
}

.plus:hover {
  opacity: .7;
}

.plusContainer h1 {
  text-align: center;
}

.inputHeader {
  padding-right: 1em;
  display: flex;
  justify-content: space-between;
}

.fileExtention {
  border-radius: 1rem;
  background-color: var(--background);
  color: white;
  padding: .1em 1em .1em 1em;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: .2em;
  min-width: 2.5em;
  user-select: none;
}

.blur {
  filter: blur(2px) grayscale(.5);
  background-color: var(--disabled_filter);
}

.loader {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  z-index: 99;
}

.loader div {
  margin-top: 10%;
  width: 8em;
  height: 8em;
  border-radius: 10em;
  background-color: var(--background_4);
  display: flex;
  align-items: center;
  justify-content: center;
}

.loader div::after {
  content: '';
  background-color: var(--color_main);
  transition: 1s;
  width: 80%;
  height: 80%;
  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%);
}

.loading {
  cursor: wait;
}

.loading::after {
  animation: loading_start 1s forwards, 2s loading 1s infinite;
}

.finished {
  cursor: pointer;
}

.finished::after {
  animation: finish .5s forwards;
}

@keyframes loading_start {
  0% {
    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%);
  }

  50% {
    /*clip-path: polygon(50% 0%, 80% 10%, 100% 36%, 100% 64%, 80% 90%, 50% 100%, 20% 90%, 0 64%, 0 36%, 20% 10%);*/
    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%);
  }

  100% {
    clip-path: polygon(50% 0%, 50% 49%, 50% 100%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%);
  }
}

@keyframes loading {
  0% {
    clip-path: polygon(50% 0%, 50% 49%, 50% 100%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%);
  }

  25% {
    clip-path: polygon(50% 0%, 100% 50%, 50% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%, 0% 50%);
  }

  50% {
    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%);
  }

  75% {
    clip-path: polygon(50% 50%, 100% 50%, 50% 100%, 0 50%, 0 50%, 0 50%, 0 50%, 0 50%, 0 50%);
  }

  100% {
    clip-path: polygon(50% 0%, 50% 49%, 50% 100%, 0% 50%, 0 50%, 0 50%, 0 50%, 0 50%, 0 50%);
  }
}
/* ... */

